# guess-the-song-community-ed

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
data/pack_01/: songs.json
resources/locales/: en.yml  es.yml
scripts/: mp42mp3.sh
src/: buzz_controller.py  buzz_test.py  game.py  i18n_config.py  main.py
tests/: test_buzz_controller.py
